# jax_privacy

./: .gitignore  pyproject.toml  submit.py
experiments/image_classification/: auditing.py  config_base.py  evaluator.py  experiment.py  forward.py  run_experiment_loop.py
experiments/image_classification/configs/: cifar100_wrn_28_10_eps1_finetune.py  cifar10_wrn_16_4_eps1.py
experiments/image_classification/models/: base.py  cifar.py  imagenet_nfnets.py  imagenet_nfresnets.py  mnist.py  models.py
experiments/image_data/: __init__.py  base.py  chexpert.py  decoder.py  imagenet.py  loader.py  mimic_cxr.py  mnist_cifar_svhn.py  places365.py
jax_privacy/training/: evaluator.py  experiment.py  experiment_config.py
